name:                cool
version:             0.1
synopsis:            Cool compiler project for coursera
description:         Cool compiler project for coursera
license:             BSD3
-- license-file:        LICENSE
author:              Sergey Vinokurov
maintainer:          Sergey Vinokurov <serg.foo@gmail.com>

cabal-version:       >= 1.16
build-type:          Simple

executable           lexer
  build-depends:     base, array,
                     text, wl-pprint-text,
                     containers, template-haskell, semigroups, mtl,
                     uu-parsinglib
  hs-source-dirs:    src
  main-is:           Cool/Lexer/Main.hs
  other-modules:     Cool.Lexer.Lexer
  ghc-options:       -main-is Cool.Lexer.Main
  build-tools:       alex
  default-language:  Haskell2010
  -- alex-options:      -g

-- executable           lexer_test
--   build-depends:     base, array,
--                      text, wl-pprint-text,
--                      containers, template-haskell, semigroups
--   hs-source-dirs:    src
--   main-is:           Cool/Lexer/Test.hs
--   other-modules:     Cool.Lexer.Lexer
--   ghc-options:       -main-is Cool.Lexer.Test
--   build-tools:       alex
--   default-language:  Haskell2010

executable           parser
  build-depends:     base, array,
                     text, wl-pprint-text,
                     containers, template-haskell, semigroups, mtl,
                     uu-parsinglib
  hs-source-dirs:    src
  main-is:           Cool/Parser/Main.hs
  other-modules:     Cool.Parser.Parser
  ghc-options:       -main-is Cool.Parser.Main
  build-tools:       alex
  default-language:  Haskell2010
  -- alex-options:      -g



